src/app/teams/teams-view.scss
@import '../mixins';
@import '../variables';

.teams-view {

  .card-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    grid-auto-rows: 180px;
    &.member-cards {
      grid-auto-rows: 280px;
      mat-card-content {
        max-height: 149px;
      }
    }
    mat-card-content {
      max-height: 99px;
      overflow-y: auto;
    }
    .top-right-icon {
      position: absolute;
      top: -0.25rem;
      right: -0.25rem;
    }

    mat-card {
      display: flex;
      flex-direction: column;

      mat-card-actions {
        margin-top: auto;
        display: flex;
        justify-content: center;
      }
    }
  }

  mat-toolbar mat-chip-list {
    display: inline-flex;
  }

  mat-card-subtitle p {
    margin: 0;
  }

  .mat-subheading-2 b {
    display: inline-block;
    max-width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .toolbar-button{
    flex-shrink: 0;
  }

}

